cmake_minimum_required(VERSION 3.5)
project(teensy_sample_flashloader)
set(CMAKE_CXX_STANDARD 17)

if (NOT DEFINED TEENSY_VERSION)
    add_subdirectory(src)
    #add_subdirectory(examples/loadsample)
else()
    import_arduino_library(cores ${COREPATH} avr debug util)
    import_arduino_library(SPI ${DEPSPATH}/SPI)
    import_arduino_library(SdFat ${DEPSPATH}/SdFat/src common DigitalIO ExFatLib FatLib FsLib iostream SdCard SpiDriver)
    import_arduino_library(SD ${DEPSPATH}/SD/src)
    import_arduino_library(LittleFS ${DEPSPATH}/LittleFS/src)
    import_arduino_library(SerialFlash ${DEPSPATH}/SerialFlash util)
    import_arduino_library(Wire ${DEPSPATH}/Wire utility)
    import_arduino_library(arm_math ${DEPSPATH}/arm_math/src)
    import_arduino_library(Audio ${DEPSPATH}/Audio utility)
    import_arduino_library(TeensyVariablePlayback ${DEPSPATH}/teensy-variable-playback/src)

    add_subdirectory(src)
    add_subdirectory(examples/loadsample)
    add_subdirectory(examples/loadsamplewav)
    add_subdirectory(examples/loadsampleeurorack)
endif()

